[package]
name = "token-lending-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "^1.7"
uint = "=0.9.1"
spl-token = { version = "3.2.0", features=["no-entrypoint"] }
arrayref = "0.3.6"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
proptest = "1.0"
