[package]
authors = ["Solend Maintainers <maintainers@solend.fi>"]
description = "Solend Program CLI"
edition = "2018"
homepage = "https://solend.fi"
license = "Apache-2.0"
name = "solend-program-cli"
repository = "https://github.com/solendprotocol/solana-program-library"
version = "0.1.0"

[dependencies]
clap = "=2.34.0"
solana-clap-utils = "=1.13.5"
solana-cli-config = "=1.13.5"
solana-client = "=1.13.5"
solana-logger = "=1.13.5"
solana-sdk = "=1.13.5"
solana-program = "=1.13.5"
solend-sdk = { path="../sdk" }
solend-program = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "3.3.0", features=["no-entrypoint"] }
spl-associated-token-account = "1"

[[bin]]
name = "solend-program"
path = "src/main.rs"
